<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/nav_title_search" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/favorite"
        android:title="@string/nav_title_favorite" />

    <item
        android:id="@+id/nav_responses"
        android:icon="@drawable/responces"
        android:title="@string/nav_title_responses" />

    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/messages"
        android:title="@string/nav_title_messages" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/nav_title_profile" />

</menu>